--- a/tomotwin/protocols.conf
+++ b/tomotwin/protocols.conf
@@ -1,5 +1,10 @@
 [PROTOCOLS]
 Tomography = [
+	{"tag": "section", "text": "Tomograms", "children": [
+		{"tag": "protocol_group", "text": "Segmentation", "openItem": "False", "children": [
+		    {"tag": "protocol", "value": "ProtTomoTwinCreateMasks", "text": "default"}
+		]}
+	]},
 	{"tag": "section", "text": "Particles", "children": [
 	    {"tag": "protocol_group", "text": "Picking", "openItem": "False", "children": [
 			{"tag": "protocol", "value": "ProtTomoTwinRefPicking", "text": "default"}
