--- a/tomotwin/protocols.conf
+++ b/tomotwin/protocols.conf
@@ -7,7 +7,8 @@ Tomography = [
 	]},
 	{"tag": "section", "text": "Particles", "children": [
 	    {"tag": "protocol_group", "text": "Picking", "openItem": "False", "children": [
-			{"tag": "protocol", "value": "ProtTomoTwinRefPicking", "text": "default"}
+			{"tag": "protocol", "value": "ProtTomoTwinRefPicking", "text": "default"},
+			{"tag": "protocol", "value": "ProtTomoTwinClusterPicking", "text": "default"}
 		]}
     ]}
  ]
