refactor to split clustering into 2 protocols

--- a/tomotwin/protocols.conf
+++ b/tomotwin/protocols.conf
@@ -8,6 +8,7 @@ Tomography = [
 	{"tag": "section", "text": "Particles", "children": [
 	    {"tag": "protocol_group", "text": "Picking", "openItem": "False", "children": [
 			{"tag": "protocol", "value": "ProtTomoTwinRefPicking", "text": "default"},
+			{"tag": "protocol", "value": "ProtTomoTwinClusterCreateUmaps", "text": "default"},
 			{"tag": "protocol", "value": "ProtTomoTwinClusterPicking", "text": "default"}
 		]}
     ]}
